--- a/style.css
+++ b/style.css
@@ -18,7 +18,12 @@ div.header {
     color: black;
 }
 
-/* ==============CONTEMT================ */
+
+/* ===============HOME PAGE SPECIFIC============= */
+
+/* div.content { */
+
+/* ==============CONTENT================ */
 .content{
     display: flex;
     flex-direction: row;
@@ -82,6 +87,31 @@ div.secretbutton {
     display: block;
 }
 
+/*=============END HOME PAGE SPECIFIC =========*/
+
+
+/*============BIO SPECIFIC===========*/
+
+.bodycontainer {
+    display: flex;
+    flex-direction: column;
+} 
+
+div.biobody {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 60em
+    /* topbiobody on top of bottombiobody */
+}
+.topbiobody {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height:60%;
+}
+
+/*============END BIO SPECIFIC===========*/
 
 
 
@@ -127,3 +157,5 @@ ul.navbar {
     display: inline-block;
     
 }
+
+
