--- a/style.css
+++ b/style.css
@@ -114,10 +114,25 @@ div.biobody {
 /*============END BIO SPECIFIC===========*/
 
 
+/*============RESUME  SPECIFIC===========*/
+.resume-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 30em;
+    list-style-type: none;
+    justify-content: space-around;
+    text-align: center;
+}
+
+/*============ END RESUME  SPECIFIC===========*/
+
+
 
 /* ==========FOOTER============ */
 footer {
     margin-top: 3em;
+    border-top: 1px solid black;
     display:flex;
     flex-direction: row;
     width: 100%;
