--- a/style.css
+++ b/style.css
@@ -124,7 +124,28 @@ div.biobody {
     justify-content: space-around;
     text-align: center;
 }
+/* img.hover-image {
+    display: none;
+    
+    height: 6em;
+    width: 6em;
+   
+}
+img.hover-image::before{
+    /* color: rgba(0, 0, 0, 1); */
+    /* display: block;
+    z-index: -1;
+    height: 6em;
+    width: 6em;
+    transition: all 1s ease-in-out;
+}
 
+img.hover-image:hover::before{
+    display: block;
+    z-index: -1;
+    height: 6em;
+    width: 6em;
+}  */
 /*============ END RESUME  SPECIFIC===========*/
 
 
