--- a/style.css
+++ b/style.css
@@ -60,8 +60,16 @@ div.secretbutton {
 }
 
 /* ==============carousel============== */
-.carousel-container {
+
+.bigcarousel {
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.carousel-container {
+    width: 100%;
     display: flex;
     justify-content: right;
     text-align: center;
@@ -69,13 +77,16 @@ div.secretbutton {
 .carousel-images {
     margin-top: 8em;
     width:80%;
+    justify-content: center;
 }
 .carousel-images img {
     width: 80%;
     border-radius: 10px;
-    margin: 2em 2em 2em 2em;
+    margin: 2em 3em 1em 3em;
     align-self: center;
+    padding: none;
     display:none;
+
 }
 .carousel-button {
     align-self: center;
@@ -86,7 +97,22 @@ div.secretbutton {
 .carousel-images img:first-of-type {
     display: block;
 }
-
+.belowcarouselcontainer {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    text-align: center;
+}
+.belowcarousel{
+    width:80%;
+    justify-content: center;
+    text-align: center;
+    
+}
+.belowcarousel h3 {
+    margin: 0em 3em 0em 0em
+    
+}
 /*=============END HOME PAGE SPECIFIC =========*/
 
 
