--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ div.biobody {
 .resume-list {
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
     width: 100%;
     height: 60em;
     list-style-type: none;
@@ -240,7 +241,8 @@ div.hover-image{
     /* margin: -2em 0 0 0;  */
 }
 .resume-list li {
-    font-size: 50px;
+    font-size: 4rem;
+    margin: 0em 0em 1.5em 0em;
 }
 #hover-image1 {
     height: 150px;
