resume page animations styled with css not jquery-- much simpler and kinder to the layout of the page

--- a/style.css
+++ b/style.css
@@ -269,6 +269,15 @@ div.biobody {
     background-image: none;
 }
 
+
+
+/* .secretbutton:hover,
+.secretbutton:active {
+    background-color: transparent;
+
+    color:goldenrod
+} */
+
 .resumeheader{
     margin: 0 0 2em 0;
 }
@@ -283,31 +292,59 @@ div.hover-image{
     z-index: 1;
     
 }
+#resume-item1 {
+    width: 100%;
+    height: 2em;
+}
+#resume-item1:hover {
+    background-image: url("resume_images/textbook.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+#resume-item2 {
+    width: 100%;
+    height: 2em;
+}
+#resume-item2:hover {
+    background-image: url("resume_images/kids.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+#resume-item3 {
+    width: 100%;
+    height: 2em;
+}
+#resume-item3:hover {
+    background-image: url("resume_images/bread.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+#resume-item4 {
+    width: 100%;
+    height: 2em;
+}
+#resume-item4:hover {
+    background-image: url("resume_images/quill.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
 #resume-item5 {
+    width: 100%;
+    height: 2em;
     margin-bottom: 3em;
 }
-#hover-image1 {
-    height: 150px;
-    width: auto;
-    
+#resume-item5:hover {
+    background-image: url("resume_images/chair.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
-#hover-image2 {
-    height: 150px;
-    width: auto;
-}
-#hover-image3 {
-    height: 150px;
-    width: auto;
-}
-#hover-image4 {
-    height: 150px;
-    width: auto;
-}
-#hover-image5 {
-    height: 150px;
-    width: auto;
-    margin-bottom: 2em;
-}
+
+
 /*============ END RESUME  SPECIFIC===========*/
 
 
