took away headers. bio body looking good (at least on computer... need to investigate phone size)

--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@ html,body {
     z-index: -2;
  }
  
+
 body {
     font-family: 'Work Sans', sans-serif;
     display: flex;
     flex-direction: column;
+    color: rgb(41, 65, 222);
     /* background: linear-gradient(#dddddd, #9198e5); */
     /* height: 100%; */
     /* width: 100%; */
@@ -39,14 +41,16 @@ div.header {
     /* min-width: 565px; */
     margin:0 auto;
     box-sizing: border-box;
-    padding: .5em;
+    padding: 0 0 .5em 0;
     text-align: center;
     font-size: 2rem;
     /* background: linear-gradient(#e66465, #9198e5); */
-    color: black;
+    color: rgb(41, 65, 222);
 }
 
-
+/* .header h2 {
+    margin: 0 auto;
+} */
 /* ===============HOME PAGE SPECIFIC============= */
 
 /* div.content { */
@@ -194,12 +198,14 @@ div.biobody {
     display: flex;
     flex-direction: row;
     width: 100%;
+    max-width: 1380px;
+    margin: 0 auto;
     height:60%;
 }
 
 /*-------BIO PICTURE------*/
 .lefttop {
-
+    /* margin-top: 10%; */
     width:50%;
     height:100%;
 }
@@ -213,10 +219,11 @@ div.biobody {
  img#fit {
     
     width: 80%;
-    height: 80%;
+    /* height: 100%; */
+    max-height: 400px;
     border-radius: 10px;
     /* border: 1px solid rgb(203, 203, 203); */
-    margin: 10px 5%;
+    margin: 0 5% 5px 5%;
     
     /* min-width: 4em;
     min-height: 4em; */
@@ -233,11 +240,65 @@ div.biobody {
 
 .righttop {
     margin-top: 3em;
+    width: 50%;
+    height: auto;
+    font-size: 1rem;
+    
+}
+@media (min-width: 850px) {
+    .righttop {
+        height:500;
+        width:auto;
+        max-width: 60%;
+        font-size: 1.5rem;
+        margin-bottom: 2em;
+    }
+    .righttop h3{
+        font-size: 2rem;
+    }
+    .lefttop {
+        margin-top: 10%;
+        height:500;
+        margin-bottom: 2em;
+    }
+    
+}
+@media (min-width: 900px) {
+    .lefttop {
+        margin-top: 5%;
+        height:650;
+        margin-bottom: 2em;
+    }
+}
+
+@media (min-width: 1100px) {
+    .topbiobody {
+        height: 800px;
+        margin-bottom: 2em;
+
+    }
+    .righttop {
+        font-size: 2rem;
+
+    }
+    .righttop h3{
+        font-size: 3rem;
+    }
+    .lefttop {
+        margin-top: 10%;
+        
+    }
 }
 
 /*------SPRITE--------*/
-#sprite-image {
-    height:100px;
+.sprite-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 85%;
+}
+.sprite-image {
+    height:90px;
     width:90px;
     background: url("images/butterflysprite.png") ;
     animation-name: sprite;
