--- a/style.css
+++ b/style.css
@@ -477,13 +477,8 @@ div.hover-image{
 }
 .hover-text h4 {
     text-align: left;
-    margin: 0 auto 1em auto;
-    /* padding: 0;
-    margin: 1em auto;
-    align-self: center; */
+    margin: 0 auto 1em auto;  
 }
-
-
 
 .hover-text {
     display: none;
@@ -506,14 +501,18 @@ div.hover-image{
 #modal-textbox {
     background: linear-gradient(rgb(1, 66, 82), rgb(98, 2, 122));
     color: rgb(212, 232, 247);
-    height: 300px;
-    width: 450px;
+    width: 80%;
+    padding: 20px;
+    max-height: 300px;
+    max-width: 450px;
     border-radius: 3px;
     margin: 150px auto;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
-
+#close {
+    text-decoration: underline;
+}
 /*-------END MODAL---------*/
 
 
