--- a/style.css
+++ b/style.css
@@ -466,14 +466,19 @@ div.hover-image{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1250px;
 }
 .codeimage {
     margin: 1em auto;
     width: 85%;
+    border-radius: 3%;
+    max-width: 400px;
 }
 .hover-text {
     margin: 1em auto;
     width: 85%;
+    max-width: 400px;
 }
 .hover-text h4 {
     text-align: left;
@@ -515,7 +520,38 @@ div.hover-image{
 }
 /*-------END MODAL---------*/
 
-
+@media (min-width: 542px) {
+    .codeimage, .hover-text {
+        width: 80%;
+        
+    }
+}
+@media (min-width: 640px) {
+    .codeimage, .hover-text {
+        width: 70%;
+        
+    }
+    .code-container {
+        /* margin-top: 1em; */
+        width: 80%;
+        margin: 1em auto 0  auto;
+    }
+}
+@media (min-width: 640px) {
+    .codeimage, .hover-text {
+        width: 45%;
+        
+        padding: 10px;
+        flex: 1 1 auto;
+        
+    }
+    .code-container {
+        flex-direction: row;
+        justify-content: space-between;
+        /* max-height: 900px; */
+        margin-bottom: 2em;
+       
+    }
 
 
 /* =========END CODE PROJECT SPECIFIC=========== */
@@ -566,6 +602,7 @@ ul.navbar {
     flex-direction: row;
     justify-content: space-around;
     text-decoration: underline;
+    flex-wrap: wrap;
     
 }
 .navbar li {
@@ -575,13 +612,13 @@ ul.navbar {
 }
 @media (max-width:528px) {
     ul.navbar {
-        flex-wrap: wrap;
+        
         font-size: 1.25rem;
     }
 }
 @media (max-width:461px) {
     ul.navbar {
-        flex-wrap: wrap;
+        
         font-size: 1.0rem;
     }
 }
