--- a/style.css
+++ b/style.css
@@ -232,113 +232,33 @@ li.mobile {
 
 /*============BIO SPECIFIC===========*/
 
-.bodycontainer {
-    display: flex;
-    flex-direction: column;
-} 
-
-div.biobody {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 60em
-    /* topbiobody on top of bottombiobody */
-}
-.topbiobody {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    max-width: 1380px;
+.biobody {
     margin: 0 auto;
-    height:60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
 
 /*-------BIO PICTURE------*/
-.lefttop {
-    /* margin-top: 10%; */
-    width:50%;
-    height:100%;
-}
-#biopic {
-    
-    /* max-height: 7em;
-    max-width: 7em; */
-   
-}
+
+
 
  img#fit {
-    
     width: 80%;
-    /* height: 100%; */
     max-height: 400px;
-    border-radius: 10px;
-    /* border: 1px solid rgb(203, 203, 203); */
-    margin: 0 5% 5px 5%;
-    
+    border-radius: 6%;
+    margin: 0 auto 5px auto;
+    object-fit:contain;
     /* min-width: 4em;
     min-height: 4em; */
 }
 
-#fit {
-    /* max-height: 20em;
-    max-width: 3em; */
-   object-fit:contain;
 
-}
 
 /*-------END BIO PICTURE------*/
 
-.righttop {
-    margin-top: 3em;
-    width: 50%;
-    height: auto;
-    font-size: 1rem;
-    
-}
-@media (min-width: 850px) {
-    .righttop {
-        height:500;
-        width:auto;
-        max-width: 60%;
-        font-size: 1.5rem;
-        margin-bottom: 2em;
-    }
-    .righttop h3{
-        font-size: 2rem;
-    }
-    .lefttop {
-        margin-top: 10%;
-        height:500;
-        margin-bottom: 2em;
-    }
-    
-}
-@media (min-width: 900px) {
-    .lefttop {
-        margin-top: 5%;
-        height:650;
-        margin-bottom: 2em;
-    }
-}
 
-@media (min-width: 1100px) {
-    .topbiobody {
-        height: 800px;
-        margin-bottom: 2em;
-
-    }
-    .righttop {
-        font-size: 2rem;
-
-    }
-    .righttop h3{
-        font-size: 3rem;
-    }
-    .lefttop {
-        margin-top: 10%;
-        
-    }
-}
 
 /*------SPRITE--------*/
 .sprite-container {
@@ -346,10 +266,15 @@ div.biobody {
     flex-direction: row;
     justify-content: space-between;
     width: 85%;
+    margin: 1em auto 5px auto;
 }
 .sprite-image {
     height:90px;
     width:90px;
+    min-height:90px;
+    min-width:90px;
+    max-height:90px;
+    max-width:90px;
     background: url("images/butterflysprite.png") ;
     animation-name: sprite;
     animation-duration: 2s;
