--- a/style.css
+++ b/style.css
@@ -336,9 +336,12 @@ li.mobile {
 #resume-list li {
     font-size: 4rem;
     margin: 2em 0em 0em 0em;
-    
+    width: 100%;
+    height: 2em;
 }
-#resume-item1 {
+    
+
+/* #resume-item1 {
     width: 100%;
     height: 2em;
 }
@@ -363,7 +366,7 @@ li.mobile {
     height: 2em;
     margin-bottom: 3em;
 }
-
+ */
 
 
 /*============ END RESUME  SPECIFIC===========*/
