--- a/style.css
+++ b/style.css
@@ -331,43 +331,31 @@ li.mobile {
 
 
 
-
-
 #resume-list li {
-    font-size: 4rem;
-    margin: 2em 0em 0em 0em;
+    font-size: 6rem;
+    margin: 0em 0em 1em 0em;
     width: 100%;
     height: 2em;
+    font-family: 'Work Sans', sans-serif;
+    font-style: italic;
+    font-weight: 100;
+
 }
     
-
-/* #resume-item1 {
-    width: 100%;
-    height: 2em;
+#resume-list {
+    margin-top: 1em;
+    margin-bottom: 4em;
 }
 
-#resume-item2 {
-    width: 100%;
-    height: 2em;
+@media (max-width: 600px) {
+    #resume-list li {
+        font-size: 3em;
+    }
+    #resume-list {
+        margin-top: 1em;
+        margin-bottom: 3em;
+    }
 }
-
-#resume-item3 {
-    width: 100%;
-    height: 2em;
-}
-
-#resume-item4 {
-    width: 100%;
-    height: 2em;
-}
-
-#resume-item5 {
-    width: 100%;
-    height: 2em;
-    margin-bottom: 3em;
-}
- */
-
 
 /*============ END RESUME  SPECIFIC===========*/
 
