--- a/style.css
+++ b/style.css
@@ -536,20 +536,20 @@ ul.navbar {
     flex-shrink: 1;
     
 }
-@media (max-width:528px) {
+/* @media (max-width:528px) {
     ul.navbar {
         
         font-size: 1.25rem;
     }
-}
-@media (max-width:461px) {
+} */
+@media (max-width: 571px) {
     ul.navbar {
         flex-wrap: nowrap;
         white-space: nowrap;
         overflow-x: auto;
     }
-    .navbar li:first-child {
-        margin-left: auto;
+    #homenav {
+        margin-left: 1em;
     }
     
     .navbar li:last-child {
@@ -558,3 +558,13 @@ ul.navbar {
     /* scrolling navbar css from https://bhch.github.io/posts/2021/04/centring-flex-items-and-allowing-overflow-scroll/ */
 }
 
+@media (max-width: 435px) {
+    #homenav {
+        margin-left: 4em;
+    }
+}
+@media (max-width: 400px) {
+    #homenav {
+        margin-left:7em;
+    }
+}
