nav bar figured out on ALL pages for mobile now.. i think

--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ ul.navbar {
         white-space: nowrap;
         overflow-x: auto;
     }
-    #homenav {
+    .homenav {
         margin-left: 1em;
     }
     
@@ -558,13 +558,16 @@ ul.navbar {
     /* scrolling navbar css from https://bhch.github.io/posts/2021/04/centring-flex-items-and-allowing-overflow-scroll/ */
 }
 
-@media (max-width: 435px) {
-    #homenav {
-        margin-left: 4em;
+/* ----following media queries bc otherwise home button gets pushed off the page too far to the left---- */
+
+@media (max-width: 460px) {
+    .homenav {
+        margin-left: 2em;
+        padding-left: 4em;
     }
 }
 @media (max-width: 400px) {
-    #homenav {
-        margin-left:7em;
+    .homenav {
+        margin-left:5em;
     }
 }
